src/objects/Apttus_Config2__PriceRuleEntry__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__AdjustmentValueSource__c</fullName>
        <description>The source for dynamic adjustment values</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The source for dynamic adjustment values</inlineHelpText>
        <label>Adjustment Value Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Condition__c</fullName>
        <description>The condition specification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Condition</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1ListValue__c</fullName>
        <description>The list of values for the first dimension. Only applicable to List dimensions</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The list of values for the first dimension. Only applicable to List dimensions</inlineHelpText>
        <label>Dimension 1 List Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1Value__c</fullName>
        <description>The value for the first dimension. Only applicable to Matrix based rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2ListValue__c</fullName>
        <description>The list of values for the second dimension. Only applicable to List dimensions</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The list of values for the second dimension. Only applicable to List dimensions</inlineHelpText>
        <label>Dimension 2 List Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2Value__c</fullName>
        <description>The value for the second dimension. Only applicable to Matrix based rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3ListValue__c</fullName>
        <description>The list of values for the third dimension. Only applicable to List dimensions</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The list of values for the third dimension. Only applicable to List dimensions</inlineHelpText>
        <label>Dimension 3 List Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3Value__c</fullName>
        <description>The value for the third dimension</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevel__c</fullName>
        <description>Describes the loyalty level applied when conditions are met.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loyalty Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The period end date. The entry becomes ineffective after this date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The period end date. The entry becomes ineffective after this date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The period start date. The entry becomes effective on this date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The period start date. The entry becomes effective on this date.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>The product category associated with the rule. Only applicable to Volume based rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family associated with the rule. Only applicable to Volume based rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>